# Researcher

./: .gitignore  LICENSE  README.md  REPO_ANALYSIS.md  pyproject.toml  render.yaml  requirements.txt  vercel.json
Backend/Services/: Agent_Utils.py  GraphNodes.py  GraphState.py  MiddleWares.py  ResearchGraph.py  log_config.py  prompts.py  tools.py
Frontend/: index.html  main.py  server.py
api/: index.py
